objects/ASI_FOC_Route_Type__c.object
<CustomObject>
    <description>used for FOC</description>
    <fields>
        <fullName>ASI_FOC_Address_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_FOC_Address_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For HK FOC, HS/MKT Director</description>
        <inlineHelpText>For HK FOC, HS/MKT Director</inlineHelpText>
        <label>Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_FOC_Route_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Finance_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_FOC_Route_Types3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Finance_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_FOC_Finance_Director</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_LUX_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LUX Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_FOC_LUX_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Line_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For HK FOC</description>
        <inlineHelpText>For HK FOC</inlineHelpText>
        <label>Line Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_FOC_Route_Types1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Logistic_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logistic Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_FOC_Route_Types2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_POSM_Finance_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POSM Finance Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_FOC_Route_Types5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_POSM_Logistic_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POSM Logistic Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_FOC_Route_Types4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Role_Name__c</fullName>
        <label>Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Sales_POS_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales POS Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_FOC_Sales_POS_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ASI FOC Route Type</label>
    <listViews>
        <fullName>ASI_CN_FOC_Route_Types</fullName>
        <columns>NAME</columns>
        <columns>ASI_FOC_Department__c</columns>
        <columns>ASI_FOC_Role_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_FOC_Finance_Approver__c</columns>
        <columns>ASI_FOC_Logistic_Approver__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>,ASI_FOC_Route_Type__c.ASI_FOC_HK_Route_Type</value>
        </filters>
        <label>CN FOC Route Types</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HK_FOC_Route_Type</fullName>
        <columns>NAME</columns>
        <columns>ASI_FOC_Department__c</columns>
        <columns>ASI_FOC_Role_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>ASI_FOC_Address_Approver__c</columns>
        <columns>ASI_FOC_Line_Manager__c</columns>
        <columns>ASI_FOC_Director__c</columns>
        <columns>ASI_FOC_Finance_Director__c</columns>
        <columns>ASI_FOC_Finance_Approver__c</columns>
        <columns>ASI_FOC_Logistic_Approver__c</columns>
        <columns>ASI_FOC_POSM_Finance_Approver__c</columns>
        <columns>ASI_FOC_POSM_Logistic_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Route_Type__c.ASI_FOC_HK_Route_Type</value>
        </filters>
        <filters>
            <field>ASI_FOC_Role_Name__c</field>
            <operation>contains</operation>
            <value>ASI_HK</value>
        </filters>
        <label>HK FOC Route Type</label>
        <language>en_GB</language>
        <sharedTo>
            <role>ASI_ATR_IT_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TW_FOC_Route_Type</fullName>
        <columns>NAME</columns>
        <columns>ASI_FOC_Department__c</columns>
        <columns>ASI_FOC_Role_Name__c</columns>
        <columns>ASI_FOC_Address_Approver__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>ASI_FOC_Line_Manager__c</columns>
        <columns>ASI_FOC_Director__c</columns>
        <columns>ASI_FOC_Finance_Director__c</columns>
        <columns>ASI_FOC_Finance_Approver__c</columns>
        <columns>ASI_FOC_Logistic_Approver__c</columns>
        <columns>ASI_FOC_POSM_Finance_Approver__c</columns>
        <columns>ASI_FOC_POSM_Logistic_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Route_Type__c.ASI_CRM_TW_FOC_Route_Type,ASI_FOC_Route_Type__c.ASI_CRM_TW_POSM_Route_Type</value>
        </filters>
        <label>TW FOC &amp; POSM Route Type</label>
        <language>en_GB</language>
        <sharedTo>
            <role>ASI_ATR_IT_Manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FOC-RT-{000000}</displayFormat>
        <label>Route Type</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI FOC Route Types</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_FOC_Route_Type</fullName>
        <active>true</active>
        <label>ASI CRM TW FOC Route Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_POSM_Route_Type</fullName>
        <active>true</active>
        <label>ASI CRM TW POSM Route Type﻿</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_FOC_HK_Route_Type</fullName>
        <active>true</active>
        <label>FOC HK Route Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>